testdata/errors/multi-1/types.go
package typesmulti3

var _ int = 3.14
